# herdr-server-aware

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md  herdr-plugin.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.pi/docs/: README.md
src/: config.rs  herdr.rs  main.rs  picker.rs  remote.rs  servers.rs  ssh.rs
